Fixing product alignment issues when product names are different line heights

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -362,7 +362,7 @@ a.ring_opt:hover, a.ring_opt:hover p{ color: #fff; background: #66ccff;}
 .col-bx-2 { width: 20%; }
 .col-bx-10 { width: 80%; }
 }
-.items .col-lg-box { min-height: 295px; padding-bottom: 10px !important; }
+.items .col-lg-box { min-height: 295px; max-height: 295px; height: 295px; padding-bottom: 10px !important; }
 .items { margin-top: 26px; }
 .items .box { padding-bottom: 40px; max-width: 300px; }
 .items .item { border: 1px solid #d0d0d0; border-radius: 8px; background: #fff; position: relative; max-width: 225px; margin: 0 auto; }
@@ -370,7 +370,7 @@ a.ring_opt:hover, a.ring_opt:hover p{ color: #fff; background: #66ccff;}
 .items .item .mainwrap { background: #fff;  border-radius: 8px; position: relative;}
 .items .item .imagewrap { width: 100%; border-radius: 8px 8px 0 0; height: 175px; text-align: center; overflow: hidden; position: relative; cursor: pointer; }
 .items .item .imagewrap img { max-width: 100%; height: 100%; }
-.items .item .detail { padding: 6px 8px 5px 8px; }
+.items .item .detail { padding: 6px 8px 5px 8px; height: 70px; overflow: hidden}
 .items .item .detail h4 { color: #424242; font-size: 13px; font-weight: 400; line-height: 18px; font-family: 'Sintony', sans-serif; margin-bottom: 4px; display: block; height: 36px; overflow: hidden; }
 .items .item .detail span.price { color: #424242; font-size: 16px; font-family: 'Doppio One'; font-weight: 400; margin-right: 4px; }
 .items .item .detail del { color: #f44fa4; font-size: 16px; font-family: 'Doppio One'; font-weight: 400; }
